# url-shortner

./: .env.example  Cargo.toml
migrations/: 20250228150744_short_url.sql
src/: main.rs
src/db/: connect.rs  model.rs
src/routes/: mod.rs  resolve.rs  shortner.rs
